--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "com-fs-admin-smart-contract-model",
+  "name": "com-fs-email-template-model",
   "version": "1.1.0",
-  "description": "Full stack model for Smart Contract",
-  "main": "build/smartcontract.js",
+  "description": "Full stack model for Email Template",
+  "main": "build/emailtemplate.js",
   "scripts": {
     "build": "rm -rf ./build && npx tsc -p tsconfig.json"  
   },
